<resources>

    <string name="app_name">LayoutTuorial</string>
    <string name="one_one">One,One</string>
    <string name="one_two">One,Two</string>
    <string name="one_three">One,Three</string>
    <string name="one_four">One,Four</string>
    <string name="two_one">Two,One</string>
    <string name="two_two">Two,Two</string>
    <string name="two_three">Two,Three</string>
    <string name="two_four">Two,Four</string>
    <string name="three_one">Three,One</string>
    <string name="three_two">Three,Two</string>
    <string name="three_three">Three,Three</string>
    <string name="three_four">Three,Four</string>
    <string name="four_one">Four,One</string>
    <string name="four_two">Four,Two</string>
    <string name="red">Red</string>
    <string name="orange">ORANGE</string>
    <string name="yellow">YELLOW</string>
    <string name="green">GREEN</string>
    <string name="blue">BLUE</string>
    <string name="indigo">INDIGO</string>
    <string name="violet">VIOLET</string>
    <string name="open">Open...</string>
    <string name="ctrl_o">Ctrl-O</string>
    <string name="save">Save...</string>
    <string name="ctrl_s">Ctrl-S</string>
    <string name="save_as">Save As...</string>
    <string name="ctrl_shift_s">Ctrl-Shift-S</string>
    <string name="x1">X</string>
    <string name="import1">Import...</string>
    <string name="x2">X</string>
    <string name="export">Export...</string>
    <string name="ctrl_e">Ctrl-E</string>
    <string name="quit">Quit</string>

</resources>
